turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:7: error: not found: value setCouleurSol
	{case Color.WHITE => setCouleurSol(Color.BLACK); dessiner(); droite(); avance();
                             ^LangtonsAnt:8: error: not found: value setCouleurSol
	case Color.BLACK => setCouleurSol(Color.WHITE); dessiner; gauche(); avance();
                            ^