turmites.lessons.turmites.langton.Langton.scala.code
def step() {

def dessiner()
	{baisseBrosse; leveBrosse;}

(getCouleurSol()) match
	{case Color.WHITE => setCouleurSol(Color.BLACK); dessiner(); droite(); avance();
	case Color.BLACK => setCouleurSol(Color.WHITE); dessiner; gauche(); avance();
	}
}
